--- a/BussManager/Inventario/Accesorios/frmPerdidaAccesorio.resx
+++ b/BussManager/Inventario/Accesorios/frmPerdidaAccesorio.resx
@@ -117,4 +117,123 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAKCgAAAEAIABoGgAAFgAAACgAAAAoAAAAUAAAAAEAIAAAAAAAABkAACcAAAAnAAAAAAAAAAAA
+        AAD+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//f39//79/f/+//////////7////+/////v////7/
+        ///+/////v////7////+/////v////7////+/////v////7////+/////v////7////+/////v//////
+        ///+/////v39//39/f/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/f3//v7+/////////////fz7//z6+v/8+vr//Pr6//z6+v/8+vr//Pr6//z6+v/8+vr//Pr6//z6
+        +v/8+vr//Pr6//z6+v/8+vr//Pr6//z6+v/8+vr//Pr6//z6+v/8+vr//fz7/////////////v7+//79
+        /f/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/f3///////7////v29f/4ry0/92w
+        p//cr6b/3K+m/9yvpv/cr6b/3K+m/9yvpv/cr6b/3K+m/9yvpv/cr6b/3K+m/9yvpv/cr6b/3K+m/9yv
+        pv/cr6b/3K+m/9yvpv/cr6b/3K+m/92wp//iu7T/79rX//7//////////v39//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v////38/P/ivbX/1p6T/9eil//YpJn/2KSa/9ikmf/Yo5n/2KSZ/9ik
+        mv/YpJr/2KSa/9ikmv/YpJr/2KSZ/9ikmf/YpJr/2KSa/9ikmv/YpJr/2KSa/9ikmf/Yo5n/2KSZ/9ik
+        mv/YpJn/16KX/9aek//ivLX//fv7//7////+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//f39////
+        ///pzcf/1Z2S/9qpn//Zp53/2aed/9mmnP/aqJ7/2qif/9qonv/Zpp3/2aed/9mnnf/Zppz/2aed/9qo
+        nv/aqJ7/2aed/9mmnP/Zp53/2aed/9mmnf/aqJ7/2qif/9qonv/Zppz/2aed/9mnnf/aqZ//1Z2S/+nM
+        xv///////f39//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+////37Ss/9ijmf/Zp53/2aac/9mm
+        nP/Zppz/16GX/9Wek//WoJb/2aac/9mmnP/Zppz/2aac/9ikmv/WnpT/1p6T/9ikmv/Zppz/2aac/9mm
+        nP/Zppz/16CW/9Wek//XoZb/2aac/9mmnP/Zppz/2aed/9ijmf/etKv//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v39/960q//Yo5n/2aed/9mmnP/Zppz/2qie/8+QhP/JgHP/zox//9mn
+        nf/Zppz/2aac/9qonv/VnpP/yoN2/8qDdv/VnZP/2qie/9mmnP/Zppz/2aed/86MgP/JgHP/z4+D/9qo
+        nv/Zppz/2aac/9mnnf/Yo5n/3rOr//79/f/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/etKv/2KOZ/9mnnf/Zppz/2aac/9qonv/QkIX/yoJ0/86NgP/Zp53/2aac/9mmnP/aqJ7/1p6T/8uE
+        d//LhHf/1Z6T/9qonv/Zppz/2aac/9mnnf/OjYH/yoJ0/9CQhP/aqJ7/2aac/9mmnP/Zp53/2KOZ/96z
+        q//+/f3//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7/3rSr/9ijmf/Zp53/2aac/9mm
+        nP/aqJ7/0JCE/8qBdP/OjID/2aed/9mmnP/Zppz/2qie/9Wek//LhHf/y4R3/9Wek//aqJ7/2aac/9mm
+        nP/Zp53/zo2B/8mBdP/QkIT/2qie/9mmnP/Zppz/2aed/9ijmf/es6r//v39//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+/960q//Yo5n/2aed/9mmnP/Zppz/2qie/9CQhP/KgXT/zoyA/9mn
+        nf/Zppz/2aac/9qonv/VnpP/y4R3/8uEd//VnpP/2qie/9mmnP/Zppz/2aed/86Ngf/JgXT/0JCE/9qo
+        nv/Zppz/2aac/9mnnf/Yo5n/3rOq//79/f/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/etKv/2KOZ/9mnnf/Zppz/2aac/9qonv/QkIT/yoF0/86MgP/Zp53/2aac/9mmnP/aqJ7/1Z6T/8uE
+        d//LhHf/1Z6T/9qonv/Zppz/2aac/9mnnf/OjYH/yYF0/9CQhP/aqJ7/2aac/9mmnP/Zp53/2KOZ/96z
+        qv/+/f3//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7/3rSr/9ijmf/Zp53/2aac/9mm
+        nP/aqJ7/0JCE/8qBdP/OjID/2aed/9mmnP/Zppz/2qie/9Wek//LhHf/y4R3/9Wek//aqJ7/2aac/9mm
+        nP/Zp53/zo2B/8mBdP/QkIT/2qie/9mmnP/Zppz/2aed/9ijmf/es6r//v39//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+/960q//Yo5n/2aed/9mmnP/Zppz/2qie/9CQhP/KgXT/zoyA/9mn
+        nf/Zppz/2aac/9qonv/VnpP/y4R3/8uEd//VnpP/2qie/9mmnP/Zppz/2aed/86Ngf/JgXT/0JCE/9qo
+        nv/Zppz/2aac/9mnnf/Yo5n/3rOq//79/f/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/etKv/2KOZ/9mnnf/Zppz/2aac/9qonv/QkIT/yoF0/86MgP/Zp53/2aac/9mmnP/aqJ7/1Z6T/8uE
+        d//LhHf/1Z6T/9qonv/Zppz/2aac/9mnnf/OjYH/yYF0/9CQhP/aqJ7/2aac/9mmnP/Zp53/2KOZ/96z
+        qv/+/f3//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7/3rSr/9ijmf/Zp53/2aac/9mm
+        nP/aqJ7/0JCE/8qBdP/OjID/2aed/9mmnP/Zppz/2qie/9Wek//LhHf/y4R3/9Wek//aqJ7/2aac/9mm
+        nP/Zp53/zo2B/8mBdP/QkIT/2qie/9mmnP/Zppz/2aed/9ijmf/es6r//v39//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+/960q//Yo5n/2aed/9mmnP/Zppz/2qie/9CQhP/KgXT/zoyA/9mn
+        nf/Zppz/2aac/9qonv/VnpP/y4R3/8uEd//VnpP/2qie/9mmnP/Zppz/2aed/86Ngf/JgXT/0JCE/9qo
+        nv/Zppz/2aac/9mnnf/Yo5n/3rOq//79/f/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/etKv/2KOZ/9mnnf/Zppz/2aac/9qonv/QkIT/yoF0/86MgP/Zp53/2aac/9mmnP/aqJ7/1Z6T/8uE
+        d//LhHf/1Z6T/9qonv/Zppz/2aac/9mnnf/OjYH/yYF0/9CQhP/aqJ7/2aac/9mmnP/Zp53/2KOZ/96z
+        qv/+/f3//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7/3rSr/9ijmf/Zp53/2aac/9mm
+        nP/aqJ7/0JCE/8qBdP/OjID/2aed/9mmnP/Zppz/2qie/9Wek//LhHf/y4R3/9Wek//aqJ7/2aac/9mm
+        nP/Zp53/zo2B/8mBdP/QkIT/2qie/9mmnP/Zppz/2aed/9ijmf/es6r//v39//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+/960q//Yo5n/2aed/9mmnP/Zppz/2qie/9CQhP/KgXT/zoyA/9mn
+        nf/Zppz/2aac/9qonv/VnpP/y4R3/8uEd//VnpP/2qie/9mmnP/Zppz/2aed/86Ngf/JgXT/0JCE/9qo
+        nv/Zppz/2aac/9mnnf/Yo5n/3rOq//79/f/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/etKv/2KOZ/9mnnf/Zppz/2aac/9qonv/QkIT/yoF0/86MgP/Zp53/2aac/9mmnP/aqJ7/1Z6T/8uE
+        d//LhHf/1Z6T/9qonv/Zppz/2aac/9mnnf/OjYH/yYF0/9CQhP/aqJ7/2aac/9mmnP/Zp53/2KOZ/96z
+        qv/+/f3//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7/3rSr/9ijmf/Zp53/2aac/9mm
+        nP/aqJ7/0JCE/8qBdP/OjID/2aed/9mmnP/Zppz/2qie/9Wek//LhHf/y4R3/9Wek//aqJ7/2aac/9mm
+        nP/Zp53/zo2B/8mBdP/QkIT/2qie/9mmnP/Zppz/2aed/9ijmf/es6r//v39//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+/960q//Yo5n/2aed/9mmnP/Zppz/2qie/9CQhP/KgXT/zoyA/9mn
+        nf/Zppz/2aac/9qonv/VnpP/y4R3/8uEd//VnpP/2qie/9mmnP/Zppz/2aed/86Ngf/JgXT/0JCE/9qo
+        nv/Zppz/2aac/9mnnf/Yo5n/3rOq//79/f/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/etKv/2KOZ/9mnnf/Zppz/2aac/9qonv/QkIT/yoF0/86MgP/Zp53/2aac/9mmnP/aqJ7/1Z6T/8uE
+        d//LhHf/1Z6T/9qonv/Zppz/2aac/9mnnf/OjYH/yYF0/9CQhP/aqJ7/2aac/9mmnP/Zp53/2KOZ/96z
+        qv/+/f3//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v39//38/P/9+/v/3rKq/9eimP/Zppz/2aWb/9il
+        m//Zp53/z5CE/8mBdP/OjID/2aac/9mlm//YpZv/2aed/9Wdk//KhHf/yoR2/9Wdkv/Zp53/2KWb/9ml
+        m//Zppz/zoyA/8mBdP/Pj4P/2aed/9ilm//ZpZv/2aac/9eimP/esqn//fv7//38/P/+/f3//v7+//7+
+        /v/+/v7//v39/////////////////+G4sf/Zp53/26uh/9uqoP/bqqD/3Kyj/9GTh//Kg3b/z4+D/9ur
+        of/bqqD/26qg/9ysov/XoZf/y4Z5/8uGef/XoZf/3Kyi/9uqoP/bqqD/26ui/8+Pg//Kg3b/0ZKH/9ys
+        o//bqqD/26qg/9urof/Zp53/4Liw//////////////////79/f/+/v7//f38///////w3tv/1Z6V/9il
+        nP/Lh3r/yYBz/8mCdf/JgnX/yYF0/8mCdf/FeWv/w3Nl/8V4av/JgnX/yYF0/8mBdP/JgnX/yH5x/8N0
+        Zv/DdGb/yH5x/8mCdf/JgXT/yYF0/8mCdf/FeGr/w3Nl/8V5a//JgnX/yYF0/8mCdf/JgnX/yYBz/8uH
+        ev/YpZz/1Z6V//Dd2v///////f38//38+///////5cbA/7ZWRf+8YlP/vWVW/71mV/+9Zlb/vWZX/71m
+        V/+9Zlb/vmdY/75oWf++aFj/vWZW/71mV/+9Zlf/vWZW/71mV/++aFn/vmhZ/71mV/+9Zlb/vWZX/71m
+        V/+9Zlb/vmhY/75oWf++Z1j/vWZW/71mV/+9Zlf/vWZW/71mV/+9ZVb/vGJT/7ZWRf/lxL7///////38
+        +//9/Pv//////+fKxf+8Y1P/wW5f/79rXP+/a1z/v2tc/79rXP+/a1z/v2tc/79rXP+/alv/v2tc/79r
+        XP+/a1z/v2tc/79rXP+/a1z/v2pb/79qW/+/a1z/v2tc/79rXP+/a1z/v2tc/79rXP+/alv/v2tc/79r
+        XP+/a1z/v2tc/79rXP+/a1z/v2tc/8FuX/+8Y1P/58nD///////9/Pv//fz7///////nycT/u2FR/8Bs
+        Xv+/alv/v2pb/79qW/+/alv/v2pb/79qW/+/alv/v2pb/79qW/+/alv/v2pb/79qW/+/alv/v2pb/79q
+        W/+/alv/v2pb/79qW/+/alv/v2pb/79qW/+/alv/v2pb/79qW/+/alv/v2pb/79qW/+/alv/v2pb/79q
+        W//AbF7/u2FR/+fIwv///////fz7//7+/v//////+vb1//Pm4//05+X/x39y/75mV//AbF3/v2tc/79r
+        XP+/a1z/v2tc/79rXP+/alv/v2pb/79rXP+/a1z/v2tc/79rXP+/a1z/v2tc/79rXP+/a1z/v2tc/79r
+        XP+/alv/v2pb/79rXP+/a1z/v2tc/79rXP+/a1z/wGxd/75nV//HfXD/9Obk//Tm5P/69fT///////7+
+        /v/+/v7//v7+/////////////////8h/cv+7YFD/vmdY/71mVv+9Zlb/vWZX/71mVv++aFj/v2pb/79q
+        W/+9Zlf/vWZW/71mVv+9Zlb/vWZW/71mVv+9Zlb/vWZW/71mVv+9Zlf/v2pb/79qW/++aFj/vWZW/71m
+        V/+9Zlb/vWZW/75nWP+7YVH/x31w//////////////////7+/v/+/v7//v7+//7+/v/+/f3//v39//39
+        /f/PkIX/xHdp/8d8b//Ge27/xntu/8Z7bv/HfW//w3Rm/75pWf+/a1z/xXhr/8Z6bf/Femz/xXps/8V6
+        bP/Femz/xXps/8V6bP/Gem3/xXhr/79rXP++aVn/w3Rm/8d9b//Ge27/xntu/8Z7bv/HfG//xHdp/86O
+        g//9/Pz//v39//79/f/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//Pv6//z6+f/8+vr//Pr6//z6
+        +v/7+Pf//////+K9tv+6Xk7/w3Nl//ny8f////////////////////////////////////////////nz
+        8v/DdGb/ul5O/+G7tP//////+/j3//z6+v/8+vr//Pr6//z6+f/8+/r//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7//////////////////////////f39///////ivLb/ul5N/8N0
+        Zv/t1dH/8+Ph//Hg3f/x4d7/8eHe//Hh3v/x4d7/8eDd//Pj4f/t1tL/w3Vn/7pdTf/hurP///////39
+        /f///////////////////////v////7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//38/P//////79zY/7xkVP+6Xk7/uVxM/7lbS/+5W0v/uVtL/7lb
+        S/+5W0v/uVtL/7lbS/+5W0v/uVxM/7peTv+8Y1P/7trX///////9/Pz//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v39///////v29j/16Sb/9Welf/Vn5b/1Z+V/9Wflf/Vn5X/1Z+V/9Wflf/Vn5X/1Z+W/9We
+        lf/Xo5r/7trX///////+/f3//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/f3/////////
+        ///////////////////////////////////////////////////////////////////+/f3//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAA=
+</value>
+  </data>
 </root>
