--- a/BussManager/Venta/Accesorios/FrmAccReportes.resx
+++ b/BussManager/Venta/Accesorios/FrmAccReportes.resx
@@ -117,4 +117,73 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAHh4AAAEAIACwDgAAFgAAACgAAAAeAAAAPAAAAAEAIAAAAAAAEA4AANoNAADaDQAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAALAAAADgAAAA4AAAANAAAAAgAAAAAAAAAFAAAADgAAAA4AAAAOAAAABgAAAAAAAAABAAAACwAA
+        AA4AAAAOAAAACwAAAAEAAAAAAAAABgAAAA4AAAAOAAAADgAAAAUAAAAAAAAAAgAAAA0AAAAOAAAADgAA
+        AAsAAADBAAAAygAAAMoAAADDAAAANwAAAAAAAABnAAAAzAAAAMoAAADNAAAAfwAAAAAAAAAjAAAAuAAA
+        AMsAAADLAAAAuAAAACMAAAAAAAAAfwAAAM0AAADKAAAAzAAAAGcAAAAAAAAANwAAAMMAAADKAAAAygAA
+        AMEAAAD/AAAA/wAAAP8AAAD/AAAAUgAAAAAAAACSAAAA/wAAAP8AAAD/AAAAsQAAAAAAAAA2AAAA9AAA
+        AP8AAAD/AAAA9AAAADYAAAAAAAAAsQAAAP8AAAD/AAAA/wAAAJIAAAAAAAAAUgAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD8AAAAUQAAAAAAAACQAAAA/wAAAP8AAAD/AAAArgAAAAAAAAA1AAAA8QAA
+        AP8AAAD/AAAA8QAAADUAAAAAAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD9AAAATwAAAAAAAACQAAAA/wAAAP8AAAD/AAAArgAAAAAAAAA1AAAA8QAA
+        AP8AAAD/AAAA8QAAADUAAAAAAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAABmAAAAcAAAAHAAAABpAAAAGgAAAAAAAACQAAAA/wAAAP8AAAD/AAAArgAAAAAAAAA1AAAA8QAA
+        AP8AAAD/AAAA8QAAADUAAAAAAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACRAAAA/wAAAP8AAAD/AAAAsAAAAAAAAAA1AAAA8QAA
+        AP8AAAD/AAAA8QAAADUAAAAAAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABFAAAAkQAAAJAAAACSAAAAVgAAAAAAAAA1AAAA8QAA
+        AP8AAAD/AAAA8QAAADUAAAAAAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA1AAAA8QAA
+        AP8AAAD/AAAA8QAAADUAAAAAAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA1AAAA8QAA
+        AP8AAAD/AAAA8QAAADUAAAAAAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA2AAAA9AAA
+        AP8AAAD/AAAA9AAAADYAAAAAAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAjAAAAuAAA
+        AMsAAADLAAAAuAAAACMAAAABAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAACwAA
+        AA8AAAAPAAAACwAAAAEAAAADAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAEAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAEAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAEAAAArgAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAEAAAArwAAAP8AAAD/AAAA/wAAAJAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAADAAAApwAAAP8AAAD8AAAA/wAAAIkAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAALgAAAFIAAABRAAAAUQAAACQAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUQAAAPwAAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUgAAAP8AAAD/AAAA/wAA
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANwAAAMMAAADKAAAAygAA
+        AMEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAA0AAAAOAAAADgAA
+        AAsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAADwAAAA+AAAAP/gAAD/4AAA/+AAAP/g
+        AAD//4AA//+AAP//gAD//4AA//+AAP//gAD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wA=
+</value>
+  </data>
 </root>
