Completando la instancia full de la app

--- a/BussManager/Inventario/Equipos/frmEquipos.resx
+++ b/BussManager/Inventario/Equipos/frmEquipos.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAI1OAgCNTgIAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApqWVAKallQCmpZUBpqWVAqallQKmpZUCpqWVAqal
+        lQKmpZUCpqWVAqallQKmpZUCpqWVAqallQKmpZUCpqWVAaallQCmpZUAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKallQCmpZYBpaSUVKWklKGlpJSkpaSUpKWk
+        lKSlpJSkpaSUpKWklKSlpJSkpaSUpKWklKSlpJSkpaSUpKWklKSlpJShpaSUVKallgGmpZUAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApqWVAKWklBisqpzUsa+i/7Kv
+        o/+yr6P/sq+j/7Kvo/+yr6P/srCj/7Kwo/+yr6P/sq+j/7Kvo/+yr6P/sq+j/7Gvov+sqpzUpaSUGKal
+        lQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC3tKkAtrSpH8K+
+        tuDHw73/x8O9/8fDvf/Hw73/x8O9/8XBuv+3tKn/t7Sp/8XBuv/Hw73/x8O9/8fDvf/Hw73/x8O9/8K+
+        tuC2tKkft7SpAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMfD
+        vQDHw70fx8O94MfDvf/Hw73/x8O9/8fDvf/Iw77/vbqx/6allf+mpZX/vbqx/8jDvv/Hw73/x8O9/8fD
+        vf/Hw73/x8O94MfDvR/Hw70AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAx8O9AMfDvR/Hw73gyMS//8nFwP/Jxb//ycW//8nGwP/Ewbr/sa+i/7Gvov/Ewbr/ycbA/8nF
+        v//Jxb//ycXA/8jEv//Hw73gx8O9H8fDvQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADHw70Ax8O9H8fDveCspZz/nJOJ/52Uiv+dlIr/nZSK/52Uiv+bkof/m5KH/52U
+        iv+dlIr/nZSK/52Uiv+ck4n/rKWc/8fDveDHw70fx8O9AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAMfDvQDIxL4fxsK84HtuYf9PPCr/UT8t/1E/Lf9RPy3/UT8t/1E/
+        Lf9RPy3/UT8t/1E/Lf9RPy3/UT8t/088Kv97bmH/xsK84MjEvh/Hw70AAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAx8O9AMjEvh/Gwrzge25g/048Kf9QPiz/UD4s/1A+
+        LP9QPiz/UD4s/1A+LP9QPiz/UD4s/1A+LP9QPiz/Tjwp/3tuYP/GwrzgyMS+H8fDvQAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADHw70AyMS+H8bCvOB7bmD/Tjwq/1A+
+        LP9QPiz/UD4s/1A+LP9QPiz/UD4s/1A+LP9QPiz/UD4s/1A+LP9OPCr/e25g/8bCvODIxL4fx8O9AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMfDvQDIxL4fxsK84Htu
+        YP9OPCr/UD4s/1A+LP9QPiz/UD4s/1A+LP9QPiz/UD4s/1A+LP9QPiz/UD4s/048Kv97bmD/xsK84MjE
+        vh/Hw70AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAx8O9AMjE
+        vh/Gwrzge25g/048Kf9QPiz/UD4s/1A+LP9QPiz/UD4s/1A+LP9QPiz/UD4s/1A+LP9QPiz/Tjwq/3tu
+        YP/GwrzgyMS+H8fDvQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AADHw70Ax8S+H8bCvOCAcmP/UT4r/1A+LP9QPiz/UD4s/1A+LP9QPiz/UD4s/1A+LP9QPiz/UD4s/1A+
+        LP9OPCr/e25g/8bCvODIxL4fx8O9AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAMfDvQDHxL4fxsK84IN0Zf9aRTD/VEEu/1A+LP9QPiz/UD4s/1A+LP9QPiz/UD4s/1A+
+        LP9QPiz/UD4s/048Kv97bmD/xsK84MjEvh/Hw70AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAx8O9AMfEvh/Gwrzgg3Rl/1xHMv9dSDP/VkIv/1A+LP9QPiz/UD4s/1A+
+        LP9QPiz/UD4s/1A+LP9QPiz/Tjwq/3tuYP/GwrzgyMS+H8fDvQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADHw70Ax8S+H8bCvOCDdGX/XEcy/15JNP9eSTT/V0Qw/1E/
+        LP9QPiz/UD4s/1A+LP9QPiz/UD4s/1A+LP9OPCr/e25g/8bCvODIxL4fx8O9AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMfDvQDHxL4fxsK84IN0Zf9cRzL/Xkk0/15J
+        NP9eSTT/WUUx/1I/Lf9QPiz/UD4s/1A+LP9QPiz/UD4s/048Kv97bmD/xsK84MjEvh/Hw70AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAx8O9AMfEvh/Gwrzgg3Rl/1xH
+        Mv9eSTT/Xkk0/15JNP9eSTT/W0Yy/1NALv9QPiz/UD4s/1A+LP9QPiz/Tjwq/3tuYP/GwrzgyMS+H8fD
+        vQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADHw70Ax8S+H8bC
+        vOCDdGX/XEcy/15JNP9eSTT/Xkk0/15JNP9eSTT/XEcz/1RBLv9QPiz/UD4s/1A+LP9OPCr/e25g/8bC
+        vODIxL4fx8O9AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMfD
+        vQDHxL4fxsK84IN0Zf9cRzL/Xkk0/15JNP9eSTT/Xkk0/15JNP9eSTT/XUgz/1ZDL/9QPiz/UD4s/048
+        Kv97bmD/xsK84MjEvh/Hw70AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAx8O9AMfEvh/Gwrzgg3Rl/1xHMv9eSTT/Xkk0/15JNP9eSTT/Xkk0/15JNP9eSTT/Xkk0/1hE
+        MP9RPy3/Tjwp/3tuYP/GwrzgyMS+H8fDvQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADHw70Ax8S+H8bCvOCDdGX/XEcy/15JNP9eSTT/Xkk0/15JNP9eSTT/Xkk0/15J
+        NP9eSTT/Xkk0/1lFMf9QPSv/e25g/8bCvODIxL4fx8O9AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAMfDvQDHxL4fxsK84IN0Zf9cRzL/Xkk0/15JNP9eSTT/Xkk0/15J
+        NP9eSTT/Xkk0/15JNP9eSTT/Xkk0/1lEMP9+cGL/xsK84MjEvh/Hw70AAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAx8O9AMfEvh/Gwrzgg3Rl/1xHMv9eSTT/Xkk0/15J
+        NP9eSTT/Xkk0/15JNP9eSTT/Xkk0/15JNP9eSTT/XEcy/4N0ZP/Gwrzgx8S+H8fDvQAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADHw70Ax8S+H8bCvOCDdGX/XEcy/15J
+        NP9eSTT/Xkk0/15JNP9eSTT/Xkk0/15JNP9eSTT/Xkk0/15JNP9cRzL/g3Rl/8bCvODHxL4fx8O9AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMfDvQDHxL4fxsK84IN0
+        ZP9cRzL/Xkk0/15JNP9eSTT/Xkk0/15JNP9eSTT/Xkk0/15JNP9eSTT/Xkk0/1xHMv+DdGT/xsK84MfE
+        vh/Hw70AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAx8O9AMfE
+        vh/Gwrzgg3Rk/1tGMf9dSDP/XUgz/11IM/9dSDP/XUgz/11IM/9dSDP/XUgz/11IM/9dSDP/W0Yx/4N0
+        ZP/Gwrzgx8S+H8fDvQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AADHw70Ax8O+H8bCvOCMfnD/aVZD/2tYRf9rWEX/a1hF/2tYRf9rWEX/a1hF/2tYRf9rWEX/a1hF/2tY
+        Rf9pVkP/jH5w/8bCvODHw74fx8O9AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAMfDvQDHw70fx8O94L+6sv+6tKz/urSs/7q0rP+6tKz/urSs/7q0rP+6tKz/urSs/7q0
+        rP+6tKz/urSs/7q0rP+/urL/x8O94MfDvR/Hw70AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAx8O9AMfDvRnHw73WyMS+/8jEvv/Fwrv/tbOn/7KwpP+ysKT/srCk/7Kw
+        pP+ysKT/srCk/7Wzp//Fwrv/yMS+/8jEvv/Hw73Wx8O9GcfDvQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADHw70Ax8O9AsfDvVnHw72ix8O9pMO/uKSpqJmlpaSUpaWk
+        lKWlpJSlpaSUpaWklKWlpJSlqaiZpcO/uKTHw72kx8O9osfDvVnHw70Cx8O9AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADHw70Ax8O9AMfDvQHHw70Cw7+4Aq6t
+        nwKrqpwCq6qcAquqnAKrqpwCq6qcAquqnAKurZ8Cw7+4AsfDvQLHw70Bx8O9AMfDvQAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/4AB//4AAH/+AAB//gAAf/4AAH/+AAB//gAAf/4AAH/+AAB//gAAf/4A
+        AH/+AAB//gAAf/4AAH/+AAB//gAAf/4AAH/+AAB//gAAf/4AAH/+AAB//gAAf/4AAH/+AAB//gAAf/4A
+        AH/+AAB//gAAf/4AAH/+AAB//gAAf/+AAf8=
+</value>
+  </data>
 </root>
